--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
 
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=592663b3-9979-4841-ab9e-67b21f189d13&lang=ru_RU" type="text/javascript"></script>
+
     <title>Vite App</title>
   </head>
   <body>
